--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,7 @@
 @import './layout/index.css';
 /* theme files */
 @import './theme/nav.css';
-@import './theme/main.css';
-@import './theme/aside.css';
+@import './theme/galeria-slider.css';
 /* components files */
 /* components files */
 
