Se termino el diseño y la funcionalidad de la galeria

--- a/css/config/var.css
+++ b/css/config/var.css
@@ -5,6 +5,7 @@
   /***************************/
   --color-gray-mediem: #f8f9fa;
   --color-blue: #1846DA;
+  --color-blue-dark: #102c8a;
   --color-gray: #F7F7F7;
   --color-gray-text: #999999;
   --color-green: #8DC63F;
