--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -7,12 +7,41 @@
   border: 1px solid rgba(254,235,60,1);
   color: var(--color-white);
   font-weight: 700;
-
 }
 
 .btn__donate:hover{
-  border: 1px solid var(--color-green);
+  border: 1px solid var(--color-blue);
   color: var(--color-white);
-  background: var(--color-green);
+  background: var(--color-blue);
+  transition: all 0.5s 0s ease-in;
+}
+
+.galeria__slider__container__info__btn{
+  margin: 0.9rem 1rem;
+  padding: 0.8rem 1.5rem;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+  background: var(--color-blue);
+  border: 1px solid var(--color-blue);
+  color: var(--color-white);
+  font-weight: 700;
+}
+
+.galeria__slider__container__info__btn:hover{
+  background: var(--color-blue-dark);
+  border: 1px solid var(--color-blue-dark);
+  transition: all 0.5s 0s ease-in;
+}
+
+.galeria__slider__container__info__btn--modifier{
+  background: transparent;
+  border: 1px solid white;
+}
+
+.galeria__slider__container__info__btn--modifier:hover{
+  border: 1px solid var(--color-blue);
+  color: var(--color-white);
+  background: var(--color-blue);
   transition: all 0.5s 0s ease-in;
 }
