--- a/css/theme/galeria-slider.css
+++ b/css/theme/galeria-slider.css
@@ -12,10 +12,13 @@
   height: 40rem;
 }
 
+
 .galeria__slider__container__items{
   position: relative;
   object-fit: cover;
 }
+
+
 .galeria-animate-left{
   animation: bounce; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 1s;
@@ -24,15 +27,21 @@
   animation: bounce; /* referring directly to the animation's @keyframe declaration */
   animation-duration: 1s;
 }
-
 .galeria__slider__container__item{
   width: 100%;
+  height: 40rem;
+  position: relative;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .galeria__slider__container__arrows{
+  z-index: 500;
   position: absolute;
   width: 100%;
-  top: 78%;
+  top: 80.1%;
   justify-content: space-between;
   color: var(--color-white);
   display: flex;
@@ -59,6 +68,66 @@
     text-decoration: none;
     color: #fff;
     transition: all 0.3s ease;
+}
+
+.galeria__slider__container__info{
+  position: relative;
+  z-index: 100;
+  width: 100%;
+  top: 44.5%;
+  justify-content: center;
+  color: var(--color-white);
+  display: flex;
+}
+
+.slider__container__info__title{
+  z-index: 8;
+  font-family: "Roboto Slab";
+  height: auto;
+  width: auto;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  white-space: nowrap;
+  min-height: 0px;
+  min-width: 0px;
+  max-height: none;
+  max-width: none;
+  text-align: center;
+  line-height: 90px;
+  letter-spacing: 0px;
+  font-weight: 500;
+  font-size: 60px;
+  transform-origin: 50% 50%;
+  opacity: 1;
+  transform: translate(0px, 0px);
+  visibility: visible;
+}
+
+.slider__container__info__text__p{
+  margin: 0.7rem 0;
+  z-index: 9;
+  padding: 0 15rem;
+  display: flex;
+  justify-content: center;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  height: auto;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  white-space: normal;
+  width: 100%;
+  min-height: 0px;
+  min-width: 0px;
+  max-height: none;
+  max-width: none;
+  text-align: center;
+  line-height: 32px;
+  letter-spacing: 0px;
+  font-weight: 300;
+  font-size: 18px;
+  transform-origin: 50% 50%;
+  opacity: 1;
+  transform: translate(0px, 0px);
+  visibility: visible;
 }
 
 .galeria__slider__container__circles{
@@ -101,12 +170,9 @@
   z-index: 100;
 }
 
- .galeria__slider__container__imgs:before{
-  content:'';
-	position: absolute;
-        top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-color: rgba(0,0,0,0.6);
+.galeria__slider__container__info__btns{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
