--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
 /* theme files */
 @import './theme/nav.css';
 @import './theme/galeria-slider.css';
+@import './theme/footer.css';
 /* components files */
 /* components files */
 
