--- a/css/config/var.css
+++ b/css/config/var.css
@@ -4,7 +4,7 @@
   /* COLOR PALETTE*/
   /***************************/
   --color-gray-mediem: #f8f9fa;
-  --color-blue: #1846DA;
+  --color-blue: #1944E0;
   --color-blue-dark: #102c8a;
   --color-gray: #F7F7F7;
   --color-gray-text: #999999;
@@ -14,11 +14,11 @@
   --color-gray-icon: #5e6c84;
   --color-gray-mediem: #817f7f;
   --color-gray-icon: #6b778c;
-  --color-yellow: #FEEB3C;
+  --color-yellow: #F7ED47;
   --color-green: #37bb3e;
   --color-blue: #3b4fff;
   --color-blue-tittle-card: #172b4d;
-  --color-red: #FE0000;
+  --color-red: #FB0000;
   --color-black: #161616;
   --color-white: #FFFFFF;
   --dynamic-background-color: hsl(150,2.7%,14.5%);
