--- a/css/theme/footer.css
+++ b/css/theme/footer.css
@@ -1,14 +1,24 @@
 .footer{
-  position: relative;
+  /* display: flex;
+  flex-direction: column;
+  position: relative; */
   background-color: #135276;
-  padding: 25px 0 80px;
-  margin: 3rem auto;
+/*   width: 100%; */
+  margin: 2rem auto;
 }
 .footer__container{
   display: flex;
-  justify-content: space-around;
-  margin-left: auto;
-  margin-right: auto;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 30rem;
+}
+
+.footer__container__row{
+  display: flex;
+  grid-gap: 35px;
+  justify-content: center;
+  width: 100%;
 }
 
 .footer__container__info__imgs{
