--- a/css/theme/footer.css
+++ b/css/theme/footer.css
@@ -1,10 +1,9 @@
 .footer{
-  /* display: flex;
-  flex-direction: column;
-  position: relative; */
-  background-color: #135276;
-/*   width: 100%; */
-  margin: 2rem auto;
+/*   background-color: #061138; */
+background: rgb(16,32,91);
+background: linear-gradient(127deg, rgba(16,32,91,1) 0%, rgba(13,22,55,1) 21%, rgba(9,19,54,1) 86%);
+  margin-top: 2rem;
+  margin-bottom: 0;
 }
 .footer__container{
   display: flex;
@@ -30,12 +29,16 @@
 
 .footer__container__info__img{
   display: flex;
+  border-radius: 5%;
   list-style: none;
   width: 80px;
   height: 72px;
 }
 
 .footer__container__info__texts{
+  color: var(--color-gray-text);
+  padding-bottom: 19px;
+  margin-bottom: 20px;
   margin-bottom: 20px;
 }
 
@@ -56,6 +59,7 @@
 }
 
 .footer__container__quick-links__title{
+  color: var(--color-white);
   margin-top: 1.7rem;
   margin-bottom: 60px;
 }
@@ -77,6 +81,7 @@
 }
 
 .footer__container__upcoming-events__title{
+  color: var(--color-white);
   margin-top: 1.7rem;
   margin-bottom: 60px;
 }
@@ -93,6 +98,10 @@
   border-bottom: 0px;
   padding-bottom: 0px;
   margin-bottom: 0px;
+}
+
+.container__upcoming-events__list__post__info{
+  color: var(--color-blue);
 }
 .container__upcoming-events__list__post__imgs{
   position: absolute;
@@ -124,6 +133,7 @@
 }
 
 .container__subscribe__title{
+  color: var(--color-white);
   margin-top: 1.7rem;
   margin-bottom: 60px;
 }
@@ -175,6 +185,47 @@
   display: flex;
   list-style: none;
 }
+
+.footer__bottom{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background: rgb(16,32,91);
+background: linear-gradient(127deg, rgb(16, 30, 80) 0%, rgba(13,22,55,1) 21%, rgba(9,19,54,1) 86%);
+  border-top: 1px solid #19220e;
+  padding: 21px 0;
+}
+
+.footer__bottom__container{
+   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  grid-gap: 35px;
+  width: 100%; 
+}
+
+.footer__bottom__container__row{
+  display: flex;
+  margin: 0 94px;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.footer__bottom__container__left__text{
+  color: var(--color-gray-text);
+}
+
+.footer__bottom__container__left__title{
+  color: var(--color-blue);
+  text-decoration: none;
+}
+
+.footer__bottom__container__right__title{
+  color: var(--color-blue);
+  text-decoration: none;
+}
+
 
 
 .footer__container__info,.footer__container__quick-links,.footer__container__upcoming-events,.footer__container__subscribe{
