--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -48,7 +48,7 @@
 
 .scroll-top-btn{
   position: fixed;
-  z-index: 999;
+  z-index: 1000;
   bottom: 1vh;
   cursor: pointer;
   outline: 0;
@@ -70,4 +70,21 @@
 .hidden{
   opacity: 0;
   visibility: hidden;
+}
+
+.about-us__container__info__btn{
+  padding: 0.8rem 1.5rem;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  background: var(--color-blue);
+  border: 1px solid var(--color-blue);
+  color: var(--color-white);
+  font-weight: 700;
+}
+
+.about-us__container__info__btn:hover{
+  background: var(--color-blue-dark);
+  border: 1px solid var(--color-blue-dark);
+  transition: all 0.5s 0s ease-in;
 }
