--- a/css/theme/galeria-slider.css
+++ b/css/theme/galeria-slider.css
@@ -32,7 +32,7 @@
   height: 40rem;
   position: relative;
   background-position: center;
-  background-attachment: fixed;
+/*   background-attachment: fixed; */
   background-size: cover;
   background-repeat: no-repeat;
 }
