--- a/css/components/buttons.css
+++ b/css/components/buttons.css
@@ -16,6 +16,12 @@
   transition: all 0.5s 0s ease-in;
 }
 
+.galeria__slider__container__info__btns{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .galeria__slider__container__info__btn{
   margin: 0.9rem 1rem;
   padding: 0.8rem 1.5rem;
@@ -84,6 +90,29 @@
 }
 
 .about-us__container__info__btn:hover{
+  background: var(--color-blue-dark);
+  border: 1px solid var(--color-blue-dark);
+  transition: all 0.5s 0s ease-in;
+}
+
+.mission-and-vision__container__btns{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mission-and-vision__container__btn{
+  padding: 0.8rem 1.5rem;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  background: var(--color-blue);
+  border: 1px solid var(--color-blue);
+  color: var(--color-white);
+  font-weight: 700;
+}
+
+.mission-and-vision__container__btn:hover{
   background: var(--color-blue-dark);
   border: 1px solid var(--color-blue-dark);
   transition: all 0.5s 0s ease-in;
