Se termino la seccion servicios

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 @import './theme/galeria-slider.css';
 @import './theme/about-us.css';
 @import './theme/mission-and-vision.css';
+@import './theme/services.css';
 @import './theme/footer.css';
 /* components files */
 
