--- a/css/theme/services.css
+++ b/css/theme/services.css
@@ -49,11 +49,12 @@
   }
 
   .services__container__row__items__container{
+    border-radius: 2%;
     margin: 1rem auto;
     background-color: #f1f1f1;
     transition: all 0.5s ease-in-out;
     transition: all 0.5s ease-in-out;
-    width: 350px;
+    width: 390px;
     height: 100%;
     text-align: center;
     padding: 30px 30px;
@@ -61,7 +62,7 @@
   }
 
   .services__container__row__items__container--modifier{
-    margin: 1rem 3rem;
+    margin: 1rem 1.25rem;
     margin-right: 1.3rem;
     padding: 30px 30px;
   }
