Se termino la secciones de donaciones

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
 @import './theme/services.css';
 @import './theme/portfolio.css';
 @import './theme/footer.css';
+@import './theme/donation.css';
 /* components files */
 
 
