Se corrigio de ruta imagen donaciones

--- a/css/theme/donation.css
+++ b/css/theme/donation.css
@@ -22,7 +22,7 @@
   width: 100%;
   height: 500px;
   position: relative;
-  background-image: url("/assets/Donation/Donation.jpeg");
+ /*  background-image: url("/assets/Donation/Donation.jpeg"); */
   background-image: ("/Fundacion-para-el-desarrollo-del-pacifico-sur/assets/Donation/Donation.jpeg");
   background-position: center;
   background-attachment: fixed;
